fixed few layout bugs

--- a/movies_project/static/css/style.css
+++ b/movies_project/static/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .movie {
-    width: 800px;
+    width: 770px;
     padding-top: 20px;
     clear: both;
     border-bottom: 1px solid grey;
